compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_could_not_unify7.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 790
expression: "fn main() { assert 5: Int = \"\" 5 }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:20
  │
1 │ fn main() { assert 5: Int = "" 5 }
  │                    ^

Expected type:

    String

Found type:

    Int


